# The MIT License (MIT)
#
# Copyright (c) 2024 Aliaksei Bialiauski
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
[package]
name = "tagrs"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Rust test tagging"
authors = ["Aliaksei Bialiauski <aliaksei.bialiauski@hey.com>"]

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
anyhow = "1.0.86"
quote = "1.0.37"
syn = { version = "1.0", features = ["full"] }
log = { version = "0.4.21", features = [] }
hamcrest = "0.1.5"
testing_logger = "0.1.1"

[lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
question_mark_used = "deny"

[package.metadata.cargo-machete]
ignored = ["log", "anyhow", "hamcrest", "testing_logger"]
